<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PersonComboBoxExPopup</class>
 <widget class="QWidget" name="PersonComboBoxExPopup">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>408</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout">
   <property name="margin">
    <number>0</number>
   </property>
   <property name="spacing">
    <number>0</number>
   </property>
   <item row="0" column="0">
    <widget class="QTabWidget" name="tabWidget">
     <property name="tabPosition">
      <enum>QTabWidget::South</enum>
     </property>
     <property name="tabShape">
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
      <number>1</number>
     </property>
     <widget class="QWidget" name="tabClientRelation">
      <attribute name="title">
       <string>Результат поиска</string>
      </attribute>
      <layout class="QVBoxLayout">
       <property name="spacing">
        <number>4</number>
       </property>
       <property name="margin">
        <number>4</number>
       </property>
       <item>
        <widget class="CTableView" name="tblPersonFind"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabSearch">
      <attribute name="title">
       <string>&amp;Поиск</string>
      </attribute>
      <layout class="QGridLayout">
       <property name="margin">
        <number>4</number>
       </property>
       <property name="spacing">
        <number>4</number>
       </property>
       <item row="1" column="0">
        <widget class="QLabel" name="lblOrgStructure">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="text">
          <string>Подразделение</string>
         </property>
        </widget>
       </item>
       <item row="3" column="1" colspan="2">
        <widget class="QCheckBox" name="chkSpeciality">
         <property name="text">
          <string>Учитывать специальность</string>
         </property>
         <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="lblSpeciality">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="text">
          <string>Специальность</string>
         </property>
        </widget>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="lblActivity">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="text">
          <string>Вид деятельности</string>
         </property>
        </widget>
       </item>
       <item row="11" column="0">
        <spacer>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>141</height>
          </size>
         </property>
        </spacer>
       </item>
       <item row="12" column="0" colspan="2">
        <spacer>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>231</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item row="12" column="2">
        <widget class="QDialogButtonBox" name="buttonBox">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="standardButtons">
          <set>QDialogButtonBox::Apply|QDialogButtonBox::Reset</set>
         </property>
         <property name="centerButtons">
          <bool>false</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
        <widget class="COrgStructureComboBox" name="cmbOrgStructure"/>
       </item>
       <item row="6" column="0">
        <widget class="QLabel" name="lblAcademicDegree">
         <property name="text">
          <string>Ученая степень</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1" colspan="2">
        <widget class="CRBComboBox" name="cmbSpeciality"/>
       </item>
       <item row="5" column="1" colspan="2">
        <widget class="CRBComboBox" name="cmbActivity"/>
       </item>
       <item row="0" column="1" colspan="2">
        <widget class="COrgComboBox" name="cmbOrganisation"/>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="lblOrganisation">
         <property name="text">
          <string>ЛПУ</string>
         </property>
        </widget>
       </item>
       <item row="8" column="1" colspan="2">
        <widget class="QCheckBox" name="chkDeallocatedPerson">
         <property name="text">
          <string>Уволенные</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="lblPost">
         <property name="text">
          <string>Должность</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1" colspan="2">
        <widget class="CRBComboBox" name="cmbPost"/>
       </item>
       <item row="9" column="1" colspan="2">
        <widget class="QCheckBox" name="chkIsInvestigator">
         <property name="text">
          <string>Является главным исследователем</string>
         </property>
        </widget>
       </item>
       <item row="6" column="1" colspan="2">
        <widget class="QComboBox" name="cmbAcademicDegree">
         <item>
          <property name="text">
           <string>не определено</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>к.м.н</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>д.м.н</string>
          </property>
         </item>
        </widget>
       </item>
       <item row="7" column="1" colspan="2">
        <widget class="QLineEdit" name="edtFedCode"/>
       </item>
       <item row="7" column="0">
        <widget class="QLabel" name="lblFedCode">
         <property name="text">
          <string>Федеральный код</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>COrgStructureComboBox</class>
   <extends>QComboBox</extends>
   <header>OrgStructComboBoxes</header>
  </customwidget>
  <customwidget>
   <class>CTableView</class>
   <extends>QTableView</extends>
   <header>library/TableView.h</header>
  </customwidget>
  <customwidget>
   <class>CRBComboBox</class>
   <extends>QComboBox</extends>
   <header>library/crbcombobox.h</header>
  </customwidget>
  <customwidget>
   <class>COrgComboBox</class>
   <extends>QComboBox</extends>
   <header>Orgs/OrgComboBox.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>tabWidget</tabstop>
  <tabstop>tblPersonFind</tabstop>
  <tabstop>cmbOrganisation</tabstop>
  <tabstop>cmbOrgStructure</tabstop>
  <tabstop>cmbPost</tabstop>
  <tabstop>chkSpeciality</tabstop>
  <tabstop>cmbSpeciality</tabstop>
  <tabstop>cmbActivity</tabstop>
  <tabstop>cmbAcademicDegree</tabstop>
  <tabstop>chkDeallocatedPerson</tabstop>
  <tabstop>buttonBox</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
